<resources>
    <string name="app_name">Github User App</string>
    <string name="favorite">favorite</string>
    <string name="detail">detail</string>
    <string name="share">share</string>
    <string name="dicky_widya_angga_kusuma">Dicky Widya Angga Kusuma</string>
    <string name="dickyangga73_gmail_com">dickyangga73@gmail.com</string>
    <string name="about">About</string>
    <string name="username">Username</string>
    <string name="google">Google</string>
    <string name="san_fracisco_usa">San Fracisco-USA</string>
    <string name="_40">40</string>
    <string name="followers">Followers</string>
    <string name="_2000">2000</string>
    <string name="following">Following</string>
    <string name="repositories">Repositories</string>
    <string name="_36">36</string>
</resources>