<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_avatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/detail_avatar">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/charcoal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dicky_widya_angga_kusuma"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dicky_widya_angga_kusuma"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detail_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google"
                    android:textColor="@color/white"
                    android:drawablePadding="4dp"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:drawableStartCompat="@drawable/ic_office_building" />

                <TextView
                    android:id="@+id/detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/san_fracisco_usa"
                    android:textColor="@color/white"
                    android:drawablePadding="4dp"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:drawableStartCompat="@drawable/ic_location" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_40"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2000"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_repotories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_36"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repositories"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share"
        android:layout_width="86dp"
        android:layout_height="64dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintLeft_toRightOf="@id/cardview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        app:layout_constraintVertical_bias="0.495" />
</androidx.constraintlayout.widget.ConstraintLayout>